--- a/src/app.html
+++ b/src/app.html
@@ -7,6 +7,8 @@
 		href="%sveltekit.assets%/favicon.png" />
 	<meta name="viewport"
 		content="width=device-width" />
+	<meta http-equiv="Permissions-Policy"
+		content="interest-cohort=()">
 	%sveltekit.head%
 </head>
 
