--- a/src/app.html
+++ b/src/app.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+	<title>p2pvideo</title>
 	<meta charset="utf-8" />
 	<link rel="icon"
 		href="%sveltekit.assets%/favicon.png" />
